# models/meet_create_response.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// MeetCreateResponse meet create response
+//
+// swagger:model MeetCreateResponse
+type MeetCreateResponse struct {
+
+	// meet id
+	// Required: true
+	MeetID *string `json:"meet_id"`
+}
+
+// Validate validates this meet create response
+func (m *MeetCreateResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateMeetID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *MeetCreateResponse) validateMeetID(formats strfmt.Registry) error {
+
+	if err := validate.Required("meet_id", "body", m.MeetID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this meet create response based on context it is used
+func (m *MeetCreateResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *MeetCreateResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *MeetCreateResponse) UnmarshalBinary(b []byte) error {
+	var res MeetCreateResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
