# models/user_info.go
@@ -1,0 +1,105 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// UserInfo user info
+//
+// swagger:model UserInfo
+type UserInfo struct {
+
+	// day end
+	// Example: 20:00
+	DayEnd string `json:"day_end,omitempty"`
+
+	// day start
+	// Example: 10:00
+	DayStart string `json:"day_start,omitempty"`
+
+	// email
+	// Required: true
+	Email *string `json:"email"`
+
+	// first name
+	FirstName string `json:"first_name,omitempty"`
+
+	// last name
+	LastName string `json:"last_name,omitempty"`
+
+	// phone
+	// Required: true
+	Phone *string `json:"phone"`
+
+	// user id
+	UserID string `json:"user_id,omitempty"`
+}
+
+// Validate validates this user info
+func (m *UserInfo) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateEmail(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePhone(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *UserInfo) validateEmail(formats strfmt.Registry) error {
+
+	if err := validate.Required("email", "body", m.Email); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *UserInfo) validatePhone(formats strfmt.Registry) error {
+
+	if err := validate.Required("phone", "body", m.Phone); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this user info based on context it is used
+func (m *UserInfo) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UserInfo) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UserInfo) UnmarshalBinary(b []byte) error {
+	var res UserInfo
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
